exports[`prefer-string-trim-start-end > invalid(1): function f(foo: string) { foo.trimLeft(); } 1`] = `

  1 | function f(foo: string) { foo.trimLeft(); }

`;

exports[`prefer-string-trim-start-end > invalid(1): function f(foo: string) { foo.trimLeft(); } 2`] = `

Message:
> 1 | function f(foo: string) { foo.trimLeft(); }
    |                               ^^^^^^^^ Prefer \`String#trimStart()\` over \`String#trimLeft()\`.

Output:
  1 | function f(foo: string) { foo.trimStart(); }

`;

exports[`prefer-string-trim-start-end > invalid(2): foo.trimLeft() 1`] = `

  1 | foo.trimLeft()

`;

exports[`prefer-string-trim-start-end > invalid(2): foo.trimLeft() 2`] = `

Message:
> 1 | foo.trimLeft()
    |     ^^^^^^^^ Prefer \`String#trimStart()\` over \`String#trimLeft()\`.

Output:
  1 | foo.trimStart()

`;

exports[`prefer-string-trim-start-end > invalid(3): foo.trimRight() 1`] = `

  1 | foo.trimRight()

`;

exports[`prefer-string-trim-start-end > invalid(3): foo.trimRight() 2`] = `

Message:
> 1 | foo.trimRight()
    |     ^^^^^^^^^ Prefer \`String#trimEnd()\` over \`String#trimRight()\`.

Output:
  1 | foo.trimEnd()

`;

exports[`prefer-string-trim-start-end > invalid(4): trimLeft.trimRight() 1`] = `

  1 | trimLeft.trimRight()

`;

exports[`prefer-string-trim-start-end > invalid(4): trimLeft.trimRight() 2`] = `

Message:
> 1 | trimLeft.trimRight()
    |          ^^^^^^^^^ Prefer \`String#trimEnd()\` over \`String#trimRight()\`.

Output:
  1 | trimLeft.trimEnd()

`;

exports[`prefer-string-trim-start-end > invalid(5): foo.trimLeft.trimRight() 1`] = `

  1 | foo.trimLeft.trimRight()

`;

exports[`prefer-string-trim-start-end > invalid(5): foo.trimLeft.trimRight() 2`] = `

Message:
> 1 | foo.trimLeft.trimRight()
    |              ^^^^^^^^^ Prefer \`String#trimEnd()\` over \`String#trimRight()\`.

Output:
  1 | foo.trimLeft.trimEnd()

`;

exports[`prefer-string-trim-start-end > invalid(6): \"foo\".trimLeft() 1`] = `

  1 | "foo".trimLeft()

`;

exports[`prefer-string-trim-start-end > invalid(6): \"foo\".trimLeft() 2`] = `

Message:
> 1 | "foo".trimLeft()
    |       ^^^^^^^^ Prefer \`String#trimStart()\` over \`String#trimLeft()\`.

Output:
  1 | "foo".trimStart()

`;

exports[`prefer-string-trim-start-end > invalid(7): foo\n\t// comment\n\t.trimRight/* comment */(\n\t\t/* comment */\n\t) 1`] = `

  1 | foo
  2 | 	// comment
  3 | 	.trimRight/* comment */(
  4 | 		/* comment */
  5 | 	)

`;

exports[`prefer-string-trim-start-end > invalid(7): foo\n\t// comment\n\t.trimRight/* comment */(\n\t\t/* comment */\n\t) 2`] = `

Message:
  1 | foo
  2 | 	// comment
> 3 | 	.trimRight/* comment */(
    | 	 ^^^^^^^^^ Prefer \`String#trimEnd()\` over \`String#trimRight()\`.
  4 | 		/* comment */
  5 | 	)

Output:
  1 | foo
  2 | 	// comment
  3 | 	.trimEnd/* comment */(
  4 | 		/* comment */
  5 | 	)

`;

exports[`prefer-string-trim-start-end > invalid(8): foo?.trimLeft() 1`] = `

  1 | foo?.trimLeft()

`;

exports[`prefer-string-trim-start-end > invalid(8): foo?.trimLeft() 2`] = `

Message:
> 1 | foo?.trimLeft()
    |      ^^^^^^^^ Prefer \`String#trimStart()\` over \`String#trimLeft()\`.

Output:
  1 | foo?.trimStart()

`;
